# NativeTouchAndroidStudio

./: .project  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/exceed7/nativetouch/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/exceed7/nativetouch/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
myapplication/: build.gradle
myapplication/src/androidTest/java/com/exceed7/myapplication/: ExampleInstrumentedTest.java
myapplication/src/main/: AndroidManifest.xml
myapplication/src/test/java/com/exceed7/myapplication/: ExampleUnitTest.java
nativetouch/: .project  build.gradle
nativetouch/Assets/NativeTouch/Plugins/Android/: NativeTouch.aar
nativetouch/src/androidTest/java/com/Exceed7/NativeTouch/: ExampleInstrumentedTest.java
nativetouch/src/androidTest/java/com/exceed7/nativetouch/: ExampleInstrumentedTest.java
nativetouch/src/main/: AndroidManifest.xml
nativetouch/src/main/cpp/: CMakeLists.txt  nativetouche7.c  nativetouche7.cpp
nativetouch/src/main/java/com/Exceed7/NativeTouch/: NativeTouchListener.java
nativetouch/src/main/java/com/exceed7/nativetouch/: NativeTouchActivity.java  NativeTouchListener.java
nativetouch/src/main/res/layout/: fulloverlay.xml
nativetouch/src/main/res/values/: strings.xml
nativetouch/src/test/java/com/Exceed7/NativeTouch/: ExampleUnitTest.java
nativetouch/src/test/java/com/exceed7/nativetouch/: ExampleUnitTest.java
